--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="payment_status">Payment Status:</string>
+    <string name="prog">0%</string>
+    <string name="todo1">TODO</string>
 </resources>
