--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,9 +55,9 @@
     <string name="select1">Select</string>
     <string name="chomu_puliya1">Chomu puliya</string>
     <string name="nai_ki_thadi1">Nai ki thadi</string>
-    <string name="raja_park1">Raja park</string>
+    <string name="raja_park1">Raja Park</string>
     <string name="lnmiit1">LNMIIT</string>
-    <string name="ajmeri_gate1">Ajmeri gate</string>
+    <string name="ajmeri_gate1">Ajmeri Gate</string>
     <string name="select_destination">Destination</string>
     <string name="select_arrival">Starting Point</string>
     <string name="sunday">Sunday</string>
